--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
@@ -113,18 +113,6 @@
             }
         }
 
-        &-filterInputsCustomer {
-            box-shadow: rgba(6, 61, 97, 0.85) 0px 30px 60px -12px inset, rgba(16, 63, 85, 0.5) 0px 18px 36px -30px inset;
-            height: 70%;
-            margin-left: 25px;
-            margin-top: -20px;
-            color: aliceblue;
-
-            &::placeholder {
-                color: aliceblue;
-            }
-
-        }
     }
 
     &_displayLists {
@@ -294,17 +282,23 @@
             border: 3px solid red;
             height: 20vh;
             display: grid;
-            grid-template-columns: repeat(4 , 25%);
+            grid-template-columns: repeat(4, 25%);
 
-            &-box{
-            border: 2px solid black;
+            &-box {
+                border: 2px solid black;
 
-            &-item{
-                width: 100%;
-                height: 25%;
-                border-bottom: 1px solid rgb(86, 86, 224);
-                background-color: rgb(21, 21, 75);
-            }
+                &-item {
+                    width: 100%;
+                    height: 35%;
+                    border-bottom: 1px solid rgb(86, 86, 224);
+                    background-color: rgb(212, 211, 201);
+                }
+
+                &-signInInput {
+                    box-shadow: rgba(97, 88, 6, 0.85) 0px 30px 60px -12px inset, rgba(85, 216, 96, 0.5) 0px 18px 36px -30px inset;
+                    height: 20%;
+                    width: 100%;
+                }
             }
         }
     }
@@ -336,8 +330,13 @@
             background-size: contain;
             background-repeat: no-repeat;
 
-            &:hover {
-                transform: scale(1.2);
+            // &:hover {
+            //     transform: scale(1.2);
+            // }
+
+            &-form {
+                border: 3px solid red;
+
             }
         }
 
@@ -406,6 +405,35 @@
             height: 80%;
             width: 30%;
             margin: auto;
+
+            &_form {
+                width: 100%;
+                height: 7vh;
+
+
+                &-filterInput {
+                    box-shadow: rgba(6, 61, 97, 0.85) 0px 30px 60px -12px inset, rgba(16, 63, 85, 0.5) 0px 18px 36px -30px inset;
+                    height: 3vh;
+                    width: 60%;
+                    color: rgb(240, 232, 218);
+                    font-size: 15px;
+                    border-radius: 5px;
+
+                    &::placeholder {
+                        color: rgb(240, 232, 218);
+                    }
+                }
+
+                &-submit {
+                    width: 5vw;
+                    border-radius: 15px;
+                    color: rgb(255, 255, 255);
+                    font-weight: 1000;
+                    box-shadow: rgba(33, 13, 87, 0.75) 0px 54px 55px, rgba(32, 161, 101, 0.72) 0px -12px 30px,
+                    rgba(53, 100, 187, 0.82) 0px 4px 6px, rgba(101, 42, 136, 0.77) 0px 12px 13px, rgba(52, 88, 136, 0.99) 0px -3px 5px;
+                    background-color: rgb(107, 68, 46);
+                }
+            }
         }
     }
 
