--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
@@ -202,7 +202,7 @@
 
 .container {
     max-width: 740px;
-    height: 900px;
+    height: 1500px;
     // border: 3px solid red;
     margin: auto;
     background: linear-gradient(rgb(157, 241, 157),
@@ -271,7 +271,7 @@
                 border: none;
 
                 & p {
-                    font-size: 12px;
+                    font-size: 10px;
                 }
             }
         }
@@ -324,7 +324,7 @@
 
         &-box {
             margin-top: 10px;
-            width: 35%;
+            width: 30%;
             // border: 1px solid black;
             background-position: center;
             background-size: contain;
@@ -342,7 +342,7 @@
 
         &-display {
             width: 100%;
-            height: 25%;
+            height: 18%;
             margin-top: 5px;
             border: 1px solid rgb(197, 187, 187);
             display: flex;
@@ -391,6 +391,58 @@
         .pants {
             background-image: url("https://media.istockphoto.com/vectors/set-of-trousers-for-business-man-vector-id818252146?k=20&m=818252146&s=612x612&w=0&h=zA3CDwVXCfKAgIZ1FxkyfvGLRgKX_aentNe9AwmNDJw=");
         }
+
+        &-ShoppingCart {
+            margin-top: 45px;
+            width: 50%;
+            height: 26vh;
+            border: 1px solid rgb(117, 115, 115);
+
+            &_display {
+                overflow-y: auto;
+                white-space: nowrap;
+                display: flex;
+                flex-direction: column;
+                // border: 5px solid red;
+                height: 80%;
+
+                &-item {
+                    width: 100%;
+                    height: 40%;
+                    font-weight: 800;
+                    border-bottom: 1px solid black;
+                    display: grid;
+                    grid-template-columns: repeat(3 , 1fr);
+                    grid-template-rows: repeat(3 , 1fr);
+                    column-gap: 1em;
+                    
+
+                    &-deleteBtn {
+                        grid-column: 3/4;
+                        grid-row: 2/3;
+                        width: 80%;
+                        height: 86%;
+                        font-weight: 1000;
+                        border: 1px solid red;
+                        font-size: 10px;
+                        background-color: lawngreen;
+                    }
+
+                    &-header {
+                        grid-column: 1/4;
+                        grid-row: 1/2;
+                        font-size: 10px;
+                        font-weight: 1000;
+                        text-align: center;
+                        border: 1px solid red;
+                    }
+                    &-sizeAndPrice {
+                        font-size: 10px;
+                        border: 1px solid red;
+                    }
+                }
+            }
+        }
     }
 
     &_sortANDfilterBtns {
@@ -409,7 +461,6 @@
             &_form {
                 width: 100%;
                 height: 7vh;
-
 
                 &-filterInput {
                     box-shadow: rgba(6, 61, 97, 0.85) 0px 30px 60px -12px inset, rgba(16, 63, 85, 0.5) 0px 18px 36px -30px inset;
@@ -430,7 +481,7 @@
                     color: rgb(255, 255, 255);
                     font-weight: 1000;
                     box-shadow: rgba(33, 13, 87, 0.75) 0px 54px 55px, rgba(32, 161, 101, 0.72) 0px -12px 30px,
-                    rgba(53, 100, 187, 0.82) 0px 4px 6px, rgba(101, 42, 136, 0.77) 0px 12px 13px, rgba(52, 88, 136, 0.99) 0px -3px 5px;
+                        rgba(53, 100, 187, 0.82) 0px 4px 6px, rgba(101, 42, 136, 0.77) 0px 12px 13px, rgba(52, 88, 136, 0.99) 0px -3px 5px;
                     background-color: rgb(107, 68, 46);
                 }
             }
