--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
@@ -1,22 +1,17 @@
 .erp {
   background-color: bisque;
 }
-
 body {
-  
-  width: 100%;
-  background-image: url("https://media.gucci.com/content/HeroBigStandard_3200x1520/1643384764/HeroBigStandard_VDAY-2022-043-new_001_Default.jpg");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
   font-family: "Montserrat", sans-serif;
   color: 'whiblackte';
-  margin: 0px;
-  height: 73vh;
+  margin: 0;
+  width: 100%;
+ 
 }
 
 .container {
-
   &__navBar {
+   
     top: 0px;
     left: 0px;
     padding-bottom: 1em;
@@ -44,18 +39,20 @@ body {
 
   &__navBar2 {
     text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bolder;
-    opacity: 1;
-    
 
-    
+
+
+
+
+
 
 
     ul {
       display: inline-flex;
       list-style: none;
-      color: black;
+
+
+
 
 
 
@@ -64,10 +61,14 @@ body {
         margin: 15px;
         padding: 15px;
 
+
         a {
           text-decoration: none;
-          color: rgb(5, 5, 5);
-          
+          color: #ffffff;
+          font-family: "Montserrat", sans-serif;
+          font-weight: 900;
+
+
 
         }
       }
@@ -77,10 +78,9 @@ body {
       display: none;
       width: 130vh;
       padding: 20px;
-      font-family: "Montserrat", sans-serif;
-      transition: ease 3s;
-      transform: translateY(0px);
-       
+      opacity: 0.4;
+
+
 
 
 
@@ -96,20 +96,30 @@ body {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        background-color: beige;
-        
+        background-color: #141010;
        
-      
+        
+
+
+
 
 
 
         li {
 
-          color: rgb(5, 5, 5);
-
           :hover {
             text-decoration: underline;
             cursor: pointer;
+            
+            
+          }
+
+          a{
+            color: #ffffff;
+            font-size: large;
+            font-weight: bolder;
+            font-family: "Montserrat", sans-serif;
+            
           }
         }
 
@@ -145,6 +155,7 @@ body {
     text-align: center;
     font-weight: 300;
     font-size: larger;
+    
   }
 
   &__bottom {
@@ -287,8 +298,8 @@ $background-color:#ffffff;
 
 .active,
 .container__navBar2 ul li a:hover {
-  color: black;
   border-radius: 3px;
+  color: #ffffff;
 
 }
 
@@ -297,8 +308,20 @@ $background-color:#ffffff;
   margin-top: 15px;
   margin-left: -15px;
   position: absolute;
-  transition: ease 3ms;
-      transform: translateY(-20px);
-    
+ 
+  transform: translateY(-20px);;
+}
+
+.sub-container{
+  background-image: url("https://media.gucci.com/content/HeroBigStandard_3200x1520/1643384764/HeroBigStandard_VDAY-2022-043-new_001_Default.jpg");
+  height: 100vh;
+  margin: 0;
+  
   
 }
+
+// @media only screen and (max-width: 1380px) {
+//   body{
+    
+//   }
+// }
