--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -690,3 +690,11 @@ body {
 }
 
 }
+
+@media screen and (max-width: 750px) {
+    .home{
+        &__title{
+            font-size: 40px;
+        }
+    }
+}
