--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
@@ -1,203 +1,258 @@
-body{
+body {
   width: 100%;
   display: flex;
   flex-direction: column;
 }
+
 .header {
-width: 100%;
-display: flex;
-flex-direction: column;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   // display: grid;
   // grid-template-columns: repeat(3, 1fr);
   // grid-template-rows: 1fr;
   align-items: center;
   height: 9vh;
-  &__sort{
-      margin-bottom: 70px;
-      margin-top: 120px;
-  
-  }
-.usp__bar{
-  display: flex;
-  flex-direction: row;
-  width: 100vw;
-  align-items: center;
-  min-height: 40px;
-  max-height: 40px;;
-  justify-content: space-around;
-  background-color: black;
-  margin-bottom: 30px;
-  p{
-   transition:  ease 1s;
-    color: white;
-    font-size: 10px;
-    line-height: 10px;
-    &:hover{
-    transform: scale(1.5);
 
+  &__sort {
+    margin-bottom: 70px;
+
+    border-bottom: solid rgb(199, 199, 199) 1px;
+    border-top: solid rgb(199, 199, 199) 1px;
+
+    select {
+      border: none;
+      height: 44px;
+      padding: 10px;
+      font-size: 20px;
+      margin: 7px;
+
+      &:hover {
+        border: solid 1px black;
+      }
     }
   }
-}
-&__inner{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-  border-bottom: solid rgb(199, 199, 199) 1px ;
-  &__side--menu{
-    margin-top: 10px;
+
+  .usp__bar {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    align-items: center;
+    min-height: 40px;
+    max-height: 40px;
+    justify-content: space-around;
+    background-color: black;
+    margin-bottom: 30px;
+
+    p {
+      transition: ease 1s;
+      color: white;
+      font-size: 10px;
+      line-height: 10px;
+
+      &:hover {
+        transform: scale(1.5);
+
+      }
+    }
+  }
+
+  &__inner {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 135px;
-    height: 100%;
-    margin-right: 35px;
+    width: 100%;
+    border-bottom: solid rgb(199, 199, 199) 1px;
+    align-items: baseline;
+    padding-bottom: 7px;
 
-    i{
-   transition:  ease 1s;
-      
-      &:hover{
-        text-shadow: 0 0 15px rgb(56, 56, 56);
+    &__side--menu {
+      margin-top: 10px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 135px;
+      height: 100%;
+      margin-right: 35px;
+
+      i {
+        transition: ease 1s;
+
+        &:hover {
+          text-shadow: 0 0 15px rgb(119, 11, 11);
+        }
+      }
+
+    }
+
+    &--searchBar {
+      padding: 2px;
+      display: flex;
+      align-items: center;
+      margin-right: -385px;
+      height: 30px;
+      transition: border ease 1s;
+      // border: solid thin #e9ecef;
+      background-color: #e9ecef;
+
+      &:hover {
+        border: solid black 1px;
+      }
+
+      input {
+        background-color: #e9ecef;
+        border: none;
       }
     }
-    
-  }
-  &--searchBar{
-    padding: 2px;
-    display: flex;
-    align-items: center;
-    margin-right: -385px;
-   height: 30px;
-   transition: border ease 1s;
-    border: solid thin #e9ecef;
-    background-color:#e9ecef;
-    &:hover{
-      border: 1px solid black;
-    }
-    input{
-    background-color: #e9ecef;
-      border: none;
-    }
-  }
-&--logo {
-  width: 90px;
-  height: 90px;
-  img{
- height: 100%;
- width: 100%;
-  }
-}
 
-&--nav {
-  font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  bottom: 30px;
-  gap: 40px;
-  justify-content: center;
-  .dropdown-men{
-    display: none;
-    position: absolute;
-    background-color: #f70808;
-    min-width: 100%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  }
-  .nav__item--man{
-    &:hover .dropdown-men {
-      display: block;
-     
+    &--logo {
+      width: 90px;
+      height: 90px;
+
+      img {
+        height: 100%;
+        width: 100%;
+      }
+    }
+
+    &--nav {
+      font-size: 20px;
+      font-family: Arial, Helvetica, sans-serif;
+      display: flex;
+      bottom: 30px;
+      gap: 40px;
+      justify-content: center;
+
+      .nav__item {
+        text-decoration: none;
+        color: rgb(0, 0, 0);
+
+        &:hover {
+          font-size: 100px;
+        }
+
+      }
+
+
+
 
     }
   }
-  a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    &:hover{
-      border-bottom: 2px  solid black;
-    }
-  }
- 
-}
-}
- 
 
-  // &__searchBar {
-  //   input {
-  //     padding: 6px 10px;
-  //     margin-top: 8px;
-  //     margin-right: 16px;
-  //     background: #ddd;
-  //     font-size: 17px;
-  //     border: none;
-  //     cursor: pointer;
-  //   }
-  // }
+
 }
-.wrraper{
+
+.wrapper {
   display: flex;
   flex-direction: column;
-}
-.breadCrumbs {
-  ul {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
+  padding-left: 150px;
+  padding-right: 150px;
 
-    li {
-      a {
-        text-decoration: none;
-        color: black;
-      }
-      &:active {
-        text-decoration: underline;
-      }
+  &--header {
+    margin-top: 120px;
+
+    h1 {
+      font-size: 50px;
+
+
     }
 
-    text-decoration: none;
-    list-style: none;
+    p {
+      width: 60%;
+    }
+
+    .breadCrumbs {
+      ul {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
+        padding: 0;
+
+        li {
+
+
+          a {
+            text-decoration: none;
+            color: black;
+
+            &:hover {
+              background-color: #000;
+              color: white;
+            }
+          }
+
+          display: flex;
+          flex-direction: row;
+          list-style: none;
+        }
+
+        li:nth-child(1) {
+          font-size: 12px;
+
+        }
+
+        li:nth-child(2) {
+          margin-right: 5px;
+          font-weight: bold;
+          text-decoration: underline;
+          font-size: 25px;
+
+        }
+      }
+    }
   }
 }
 
+
+
 .cards {
-  padding-left: 150px;
-  padding-right: 150px;
+
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(4, 1fr);
   position: relative;
+
   &__item {
     width: 300px;
     height: 420px;
-    &:hover{
-     border: 1px solid black;
+
+    &:hover {
+      border: 1px solid black;
 
     }
-    .fa-heart{
+
+    .fa-heart {
       position: absolute;
       right: 0;
       top: 0;
       z-index: 8;
       margin: 10px;
     }
+
     .picture {
       width: 303px;
-  height: 303px;
-  position: relative;
-  display: inline-block;
-  .img-top {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 99;
-  }
-    &:hover .img-top .fa-heart{
-      display: inline;
-    }  
-    &:hover .img-top {
-      display: inline;
-    }  
-      img{
+      height: 303px;
+      position: relative;
+      display: inline-block;
+
+      .img-top {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 99;
+      }
+
+      &:hover .img-top .fa-heart {
+        display: inline;
+      }
+
+      &:hover .img-top {
+        display: inline;
+      }
+
+      img {
         display: block;
         width: 99%;
         height: 100%;
@@ -205,18 +260,20 @@ flex-direction: column;
     }
   }
 }
-.footer{
 
-  &__top{
+.footer {
+
+  &__top {
     display: flex;
     flex-direction: row;
-    background-color:#ede734 ;
+    background-color: #ede734;
     color: #000;
     width: 100%;
     height: 100px;
     align-items: center;
     justify-content: space-around;
-    button{
+
+    button {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
@@ -225,11 +282,13 @@ flex-direction: column;
       background-color: black;
       color: white;
       border: none;
-        &:hover{
-          color:rgb(83, 81, 81) ;
-        
+
+      &:hover {
+        color: rgb(83, 81, 81);
+
       }
-      h4{
+
+      h4 {
         font-size: 35px;
       }
     }
