--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
@@ -2,17 +2,16 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin: 0;
 }
 
 .header {
   width: 100%;
   display: flex;
   flex-direction: column;
-  // display: grid;
-  // grid-template-columns: repeat(3, 1fr);
-  // grid-template-rows: 1fr;
+
   align-items: center;
-  height: 9vh;
+  height: 40vh;
 
   &__sort {
     margin-bottom: 70px;
@@ -64,7 +63,7 @@ body {
     width: 100%;
     border-bottom: solid rgb(199, 199, 199) 1px;
     align-items: baseline;
-    padding-bottom: 7px;
+    height: 107px;
 
     &__side--menu {
       margin-top: 10px;
@@ -112,6 +111,9 @@ body {
       img {
         height: 100%;
         width: 100%;
+
+
+
       }
     }
 
@@ -126,11 +128,11 @@ body {
       .nav__item {
         text-decoration: none;
         color: rgb(0, 0, 0);
+        padding-bottom: 10px;
 
         &:hover {
-          font-size: 100px;
+          border-bottom: solid black 3px;
         }
-
       }
 
 
@@ -142,6 +144,26 @@ body {
 
 }
 
+.container {
+  background-size: cover;
+  background-image: url(https://st-adidas-isr.mncdn.com/content/uploads/2022_hp/january/predator/d.webp);
+  width: 100%;
+  height: 648px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  h2 {
+    margin-left: 70px;
+    font-size: 50px;
+  }
+
+  p {
+    margin-left: 70px;
+
+  }
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -149,7 +171,6 @@ body {
   padding-right: 150px;
 
   &--header {
-    margin-top: 120px;
 
     h1 {
       font-size: 50px;
