--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
@@ -336,3 +336,23 @@ footer {
   width: 100vw;
   grid-area: 3;
 }
+.rootBooks {
+  display: grid;
+  gap: 10px;
+  color: #1b1b1b;
+  background-color: rgb(200, 173, 127);
+  justify-content: space-between;
+  grid-template-columns: repeat(2, 1fr);
+
+  &__card{
+    
+    background-color: whitesmoke;
+    display: grid;
+    border: solid 2px grey;
+   svg{
+     height: 20px;
+   }
+    
+  }
+  
+}
