--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
@@ -1,20 +1,29 @@
 * {
     box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Arimo', sans-serif;
 }
 
 .main {
-    max-width: 300px;
-    height: 700px;
+    // max-width: 300px;
+    height: 1000px;
     // border: 3px solid black;
     margin: auto;
     background-image:
         linear-gradient(90deg, rgb(70, 74, 75), rgba(160, 167, 166, 0)),
-        repeating-linear-gradient(-45deg, #57779b, #1b7557 1.5px, #456bb3 2px, #422dbd 4px);
+        repeating-linear-gradient(-45deg, #1b4677, #1b7557 1.5px, #456bb3 2px, #422dbd 4px);
+       
+        &-header{
+            text-decoration: underline;
+            font-size: 20vh;
+            color:sienna;
+            text-align: center;
+            font-family:sans-serif;
+            font-family: 'Arimo', sans-serif;
+        }
 
     &_form {
-        height: 300px;
-        max-width: 300px;
+        height: 700px;
+        // max-width: 300px;
         // border: 3px solid red;
         display: grid;
         grid-template-columns: repeat(3, 33%);
@@ -30,27 +39,29 @@
             &-Btn {
                 box-shadow: rgba(38, 168, 21, 0.55) 0px 30px 60px -12px inset, rgba(119, 85, 33, 1.5) 0px 18px 36px -30px inset;
                 grid-column: 2/3;
+                color: brown;
                 width: 45%;
                 border-radius: 40px;
                 font-weight: 1000;
-                font-size: 15px;
+                font-size: 7vh;
+                cursor: pointer;
             }
         }
 
         &-selectCatagory {
-            font-size: 15px;
             font-weight: bold;
-            box-shadow: rgba(102, 122, 153, 0.85) 0px 30px 60px -12px inset, rgba(77, 76, 74, 0.5) 0px 18px 36px -30px inset;
-            height: 4vh;
+            box-shadow: rgba(153, 135, 102, 0.85) 0px 30px 60px -12px inset, rgba(77, 76, 74, 0.5) 0px 18px 36px -30px inset;
+            height: 10vh;
             text-align: center;
             -webkit-appearance: none;
             -moz-appearance: none;
             appearance: none;
             width: 100%;
-            background: rgb(8, 95, 55);
-            color: rgb(241, 234, 234);
+            background: burlywood;
             grid-column: 1/4;
             font-weight: bold;
+            cursor: pointer;
+            font-size: 7vh;
 
             &-options {
                 font-size: 15px;
@@ -74,7 +85,11 @@
 
             &-btn {
                 width: 33%;
-                box-shadow: rgba(68, 66, 68, 0.75) 0px 30px 60px -12px inset, rgba(183, 96, 199, 0.8) 0px 18px 36px -10px inset;
+                box-shadow: rgba(218, 88, 88, 0.75) 0px 30px 60px -12px inset, rgba(183, 96, 199, 0.8) 0px 18px 36px -10px inset;
+                font-size: 5vh;
+                cursor: pointer;
+    
+
             }
         }
 
@@ -99,29 +114,33 @@
         &-filter-btn {
             width: 40%;
             height: 33%;
-            box-shadow: rgba(68, 66, 68, 0.75) 0px 30px 60px -12px inset, rgba(24, 102, 107, 0.8) 0px 18px 36px -10px inset;
+            box-shadow: rgba(68, 67, 66, 0.75) 0px 30px 60px -12px inset, rgba(24, 102, 107, 0.8) 0px 18px 36px -10px inset;
+        font-size: 5vh;
         }
+
 
         &-filterInputs {
             box-shadow: rgba(6, 61, 97, 0.85) 0px 30px 60px -12px inset, rgba(16, 63, 85, 0.5) 0px 18px 36px -30px inset;
             height: 30%;
-           
+
 
             &-option {
                 font-size: 15px;
                 background-color: #037043;
             }
         }
-        &-filterInputsCustomer{
+
+        &-filterInputsCustomer {
             box-shadow: rgba(6, 61, 97, 0.85) 0px 30px 60px -12px inset, rgba(16, 63, 85, 0.5) 0px 18px 36px -30px inset;
             height: 70%;
             margin-left: 25px;
             margin-top: -20px;
             color: aliceblue;
-            &::placeholder{
+
+            &::placeholder {
                 color: aliceblue;
             }
-           
+
         }
     }
 
@@ -151,16 +170,17 @@
         &-box {
             height: 100%;
             width: 100%;
-            // border-bottom: 1px solid rgb(0, 0, 0);
+            border-bottom: 10px solid(0, 0, 0);
             display: flex;
             flex-direction: row;
             column-gap: 3px;
-            overflow: auto;
+            overflow-x: auto;
             white-space: nowrap;
+
 
             &-card {
                 height: 100%;
-                background-color: rgb(15, 14, 14);
+                background-color: rgb(15, 8, 8);
                 width: 50%;
                 row-gap: 5px;
                 text-align: center;
@@ -186,6 +206,7 @@
                     margin-top: 10px;
                     font-size: 12px;
                     color: rgb(255, 255, 255);
+                font-size: 3vh;
                 }
             }
         }
@@ -195,6 +216,8 @@
         height: 33%;
         background-color: rgb(82, 59, 85);
         color: rgb(255, 255, 255);
+        font-size: 4vh;
+        text-align: center;
 
         &::placeholder {
             color: rgb(255, 250, 250);
@@ -226,186 +249,188 @@
     background-blend-mode: screen;
 
 
-// background-color: rgb(46, 127, 141);
-
-&_header {
     // background-color: rgb(46, 127, 141);
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    flex-direction: row;
-    margin-top: 10px;
-    height: 12vh;
-    // border: 3px solid blue;
 
-    &-logo {
-        // border: 2px solid red;
-        background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRT2g09MmhCe-sbllbrt4IiSLhWaDxbGMrEegdPhPyT5uIkLMxjR-qAi_-AIvz61Ust4s&usqp=CAU);
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
-        grid-row: 1/4;
-        grid-column: 1/2;
-        height: 10vh;
-        margin-top: -1vh;
-    }
-
-    &-search {
-        height: 10vh;
-        grid-row: 1/4;
-        grid-column: 2/8;
-        justify-content: center;
-        margin-top: 1vh;
-
-        & input {
-            width: 100%;
-            height: 50%;
-            align-self: center;
-            background-color: blanchedalmond;
-            border-radius: 10px;
-
-        }
-    }
-
-    &_menu {
-        grid-column: 8/13;
-        height: 10vh;
-        grid-row: 1/4;
-        display: flex;
-        column-gap: 1rem;
-
-        &-btn {
-            background-color: transparent;
-            box-shadow: none;
-            display: inline-block;
-            width: 25%;
-            border: none;
-
-            & p {
-                font-size: 12px;
-            }
-        }
-    }
-}
-
-&-imgsBox {
-    background-image: url(https://s18670.pcdn.co/wp-content/uploads/Top-20-Teacher-T-Shirts-on-Etsy.png);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin: auto;
-    width: 100%;
-    height: 35%;
-    margin-top: 10px;
-}
-
-&_catagories {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    flex-direction: row;
-    height: 20%;
-    margin: auto;
-
-    &-box {
+    &_header {
+        // background-color: rgb(46, 127, 141);
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        flex-direction: row;
         margin-top: 10px;
-        width: 35%;
-        // border: 1px solid black;
+        height: 12vh;
+        // border: 3px solid blue;
+
+        &-logo {
+            // border: 2px solid red;
+            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRT2g09MmhCe-sbllbrt4IiSLhWaDxbGMrEegdPhPyT5uIkLMxjR-qAi_-AIvz61Ust4s&usqp=CAU);
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+            grid-row: 1/4;
+            grid-column: 1/2;
+            height: 10vh;
+            margin-top: -1vh;
+        }
+
+        &-search {
+            height: 10vh;
+            grid-row: 1/4;
+            grid-column: 2/8;
+            justify-content: center;
+            margin-top: 1vh;
+
+            & input {
+                width: 100%;
+                height: 50%;
+                align-self: center;
+                background-color: blanchedalmond;
+                border-radius: 10px;
+
+            }
+        }
+
+        &_menu {
+            grid-column: 8/13;
+            height: 10vh;
+            grid-row: 1/4;
+            display: flex;
+            column-gap: 1rem;
+
+            &-btn {
+                background-color: transparent;
+                box-shadow: none;
+                display: inline-block;
+                width: 25%;
+                border: none;
+
+
+                & p {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
+    &-imgsBox {
+        background-image: url(https://s18670.pcdn.co/wp-content/uploads/Top-20-Teacher-T-Shirts-on-Etsy.png);
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
-
-        &:hover {
-            transform: scale(1.2);
-        }
-    }
-
-    &-display {
-        width: 100%;
-        height: 25%;
-        margin-top: 5px;
-        border: 1px solid rgb(197, 187, 187);
-        display: flex;
-        flex-direction: column;
-        column-gap: 5px;
-        overflow-y: auto;
-        white-space: nowrap;
-
-        &-card {
-            border-bottom: 5px solid rgb(0, 0, 0);
-            box-sizing: content-box;
-            box-shadow: rgba(110, 111, 112, 0.55) 0px 30px 60px 80px inset, rgba(12, 24, 94, 0.75) 0px 18px 36px 30px inset;
-            height: 100%;
-            width: 100%;
-            display: grid;
-            grid-template-columns: repeat(2, 50%);
-
-            &-details {
-                height: 100%;
-                grid-column: 1/2;
-                text-align: center;
-            }
-
-            &-img {
-                height: 100%;
-                grid-column: 2/3;
-                border-left: 1px dotted black;
-                background-position: center;
-                background-size: contain;
-                background-repeat: no-repeat;
-
-
-
-            }
-        }
-    }
-
-    .Tshirts {
-        background-image: url("https://www.buytshirtdesigns.net/wp-content/uploads/2020/02/20-Gym-T-shirts-600x450.jpg");
-    }
-
-    .shoes {
-        background-image: url("https://thumbs.dreamstime.com/b/various-types-shoes-vector-graphics-silhouettes-various-types-shoes-vector-graphics-silhouettes-shoes-men-200369007.jpg");
-    }
-
-    .pants {
-        background-image: url("https://media.istockphoto.com/vectors/set-of-trousers-for-business-man-vector-id818252146?k=20&m=818252146&s=612x612&w=0&h=zA3CDwVXCfKAgIZ1FxkyfvGLRgKX_aentNe9AwmNDJw=");
-    }
-}
-
-&_sortANDfilterBtns {
-    height: 7vh;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 15px;
-
-    &-box {
-        height: 80%;
-        width: 30%;
         margin: auto;
+        width: 100%;
+        height: 35%;
+        margin-top: 10px;
     }
-}
 
-&-select {
-    border-radius: 15%;
-    font-size: 12px;
-    font-weight: bold;
-    box-shadow: rgba(40, 40, 41, 0.85) 0px 30px 60px -12px inset, rgba(25, 34, 153, 0.8) 0px 18px 36px 30px inset;
-    height: 4vh;
-    text-align: center;
-    appearance: none;
-    width: 45%;
-    background: rgb(50, 86, 185);
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    margin: auto;
+    &_catagories {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        flex-direction: row;
+        height: 20%;
+        margin: auto;
 
-    &-options {
-        font-size: 10px;
-        display: inline-block;
-        font-family: 'Times New Roman', Times, serif;
+        &-box {
+            margin-top: 10px;
+            width: 35%;
+            // border: 1px solid black;
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
 
+            &:hover {
+                transform: scale(1.2);
+            }
+        }
+
+        &-display {
+            width: 100%;
+            height: 25%;
+            margin-top: 5px;
+            border: 1px solid rgb(197, 187, 187);
+            display: flex;
+            flex-direction: column;
+            column-gap: 5px;
+            overflow-y: auto;
+            white-space: nowrap;
+
+            &-card {
+                border-bottom: 5px solid rgb(0, 0, 0);
+                box-sizing: content-box;
+                box-shadow: rgba(110, 111, 112, 0.55) 0px 30px 60px 80px inset, rgba(12, 24, 94, 0.75) 0px 18px 36px 30px inset;
+                height: 100%;
+                width: 100%;
+                display: grid;
+                grid-template-columns: repeat(2, 50%);
+
+                &-details {
+                    height: 100%;
+                    grid-column: 1/2;
+                    text-align: center;
+                }
+
+                &-img {
+                    height: 100%;
+                    grid-column: 2/3;
+                    border-left: 1px dotted black;
+                    background-position: center;
+                    background-size: contain;
+                    background-repeat: no-repeat;
+
+
+
+                }
+            }
+        }
+
+        .Tshirts {
+            background-image: url("https://www.buytshirtdesigns.net/wp-content/uploads/2020/02/20-Gym-T-shirts-600x450.jpg");
+        }
+
+        .shoes {
+            background-image: url("https://thumbs.dreamstime.com/b/various-types-shoes-vector-graphics-silhouettes-various-types-shoes-vector-graphics-silhouettes-shoes-men-200369007.jpg");
+        }
+
+        .pants {
+            background-image: url("https://media.istockphoto.com/vectors/set-of-trousers-for-business-man-vector-id818252146?k=20&m=818252146&s=612x612&w=0&h=zA3CDwVXCfKAgIZ1FxkyfvGLRgKX_aentNe9AwmNDJw=");
+        }
+    }
+
+    &_sortANDfilterBtns {
+        height: 7vh;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 15px;
+
+        &-box {
+            height: 80%;
+            width: 30%;
+            margin: auto;
+        }
+    }
+
+    &-select {
+        border-radius: 15%;
+        font-size: 12px;
+        font-weight: bold;
+        box-shadow: rgba(40, 40, 41, 0.85) 0px 30px 60px -12px inset, rgba(25, 34, 153, 0.8) 0px 18px 36px 30px inset;
+        height: 4vh;
+        text-align: center;
+        appearance: none;
+        width: 45%;
+        background: rgb(50, 86, 185);
+        color: rgb(255, 255, 255);
+        font-weight: bold;
+        margin: auto;
+
+        &-options {
+            font-size: 10px;
+            display: inline-block;
+            font-family: 'Times New Roman', Times, serif;
+
+        }
     }
 }
