--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -349,3 +349,12 @@ body {
 .visableForm{
     transform: translateY(0px);
 }
+#footer{
+    width: 100vw;
+    height: 100px;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    background-color: var(--main-color-purple3);
+    
+}
