--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
@@ -234,6 +234,26 @@ body {
   grid-template-columns: repeat(4, 1fr);
   position: relative;
 
+  @media only screen and (max-width: 225ch) {
+    grid-template-columns: repeat(4, 1fr);
+
+  }
+
+  @media only screen and (max-width: 200ch) {
+    grid-template-columns: repeat(3, 1fr);
+
+  }
+
+  @media only screen and (max-width: 150ch) {
+    grid-template-columns: repeat(2, 1fr);
+
+  }
+
+  @media only screen and (max-width: 75ch) {
+    grid-template-columns: repeat(1, 1fr);
+
+  }
+
   &__item {
     width: 300px;
     height: 420px;
