--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
@@ -153,6 +153,11 @@ body {
   flex-direction: column;
   justify-content: center;
 
+  @media only screen and (max-width: 150ch) {
+    width: 100%;
+
+  }
+
   h2 {
     margin-left: 70px;
     font-size: 50px;
