--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -67,7 +67,22 @@ body {
     overflow-x: hidden;
 }
 
+.blurwrapper{
+    position: fixed;
+    height: 100vh;
+    background-color: #000000a8;
+    z-index: -3;
+    width: 100vw;
+
+    &-active{
+        z-index: 5;
+
+    }
+
+}
 // ---------- HOME -------  //
+
+
 
 .homeopacity {
     background-color: rgba(0, 0, 0, 0.308);
@@ -475,8 +490,11 @@ body {
 
     opacity: 0;
     position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     display: block;
-    z-index: 10;
+    z-index: -5;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -485,11 +503,9 @@ body {
     height: 90%; 
 
     &-active{
-
+        transition: opacity 1s;
         opacity: 1;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
+        z-index: 6;
     }  
 
     &__x {
@@ -500,22 +516,15 @@ body {
 
     &__box {
 
-        // width: 960px;
-        // height: 700px;
-        // background-image: url("http://www.fusushi.co.il/warehouse/temp/fu/popup.jpg");
-        // overflow: scroll;
         @include backgroundsettings();
         width: 100%;
         height: 100%;
-        // background-size: cover;
-        // background-image: url("http://en.fusushi.co.il/warehouse/temp/fu/popup.jpg");
         overflow-x: hidden;
         overflow-y: scroll;
 
         &__opacity {
-            // height: fit-content;
+
             padding: 20px;
-            // height: 100%;
             width: 100%;
             background-color: rgba(0, 0, 0, 0.856);
             display: flex;
