--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -147,7 +147,7 @@ body {
         font-size: 1.2rem;
         // border: 1px solid red;
         width: 100px;
-
+        text-align: center;
         &:hover {
             cursor: pointer;
             color: var(--main-color-purple1)
@@ -324,11 +324,11 @@ body {
 #root{
 
     .card{
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(13, 1fr);
         align-items: center;
         p{
             border: 1px solid black;
-            width: 400px;
             margin-inline: 20px;
         }
         img{
@@ -356,5 +356,5 @@ body {
     bottom: 0px;
     left: 0px;
     background-color: var(--main-color-purple3);
-    
+
 }
