--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
@@ -277,7 +277,8 @@ $background-color:#ffffff;
     position: relative;
     display: inline-block;
     text-align: center;
-    padding: 3em;
+    padding:1px;
+    border:none;
 
     img {
       height: 380px;
