--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/style.scss
@@ -147,6 +147,15 @@
         }
     }
 
+    &_picture{
+        display: grid;
+         
+        &-item{
+            width: 40px;
+            height: 40px;
+        }
+    }
+
 }
 h2{
     background-color: cadetblue;
