--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
@@ -29,6 +29,14 @@ body {
         gap: 0.4em;
         font-size: smaller;
       }
+
+      &--gucci{
+        font-size: 1em;
+        letter-spacing:12px;
+        font-family:Granjon;
+        font-weight:lighter;
+        
+      }
     }
   }
 
