--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -319,6 +319,21 @@ body {
         pointer-events: all;
     }
 }
+#footer{
+    width: 100vw;
+    height: 50px;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    background-color: var(--main-color-purple3);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    a{
+        color: white;
+        text-decoration: none;
+    }
+}
 
 ////OWNER
 #root{
@@ -348,13 +363,4 @@ body {
 }
 .visableForm{
     transform: translateY(0px);
-}
-#footer{
-    width: 100vw;
-    height: 100px;
-    position: fixed;
-    bottom: 0px;
-    left: 0px;
-    background-color: var(--main-color-purple3);
-
 }
