--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/gucciNEWyossi/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/gucciNEWyossi/style.scss
@@ -8,8 +8,26 @@
     margin-right: auto;
     font-size: 16px;
     margin-top: 20px;
-    background-color: rgb(22, 84, 88);
+    background-color: #165458;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.headerOwner {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.logoOwner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+        width: 30%;
+        border: 1px solid rgb(109, 122, 108);
+        padding: 3%;
+    }
+
 }
 
 .headerOwner {
@@ -18,14 +36,24 @@
     background-color: #242e31;
 
     &__btn {
-        padding: 2px;
+        padding: 4px;
         margin: 10px;
+        font-size: 14px;
+        background-color: #ffffff;
+        border-radius: 2px;
+        border: none;
+    }
+
+    a {
+        color: rgb(134, 111, 32);
+        text-decoration: none;
+
     }
 }
 
 .wrapperForms {
-    display: grid;
-    grid-template-rows: 2fr 1fr;
+    // display: grid;
+    // grid-template-rows: 2fr 1fr;
     background-color: #242e31;
     padding: 4px;
 }
@@ -40,7 +68,7 @@
 input,
 #select {
     min-height: 20px;
-    border-radius: 4px;
+    border-radius: 2px;
     background-color: #ffffff;
     font-size: 14px;
     width: 20%;
@@ -54,14 +82,94 @@ input,
 .sortBtns {
 
     button {
-        min-height: 22px;
-        border-radius: 4px;
-        background-color: #fdfdfd;
-        color: #d21ec3;
-        border-color: rgb(255, 255, 255);
+        min-height: 40px;
+        border: none;
+        color: rgb(90, 90, 90);
         cursor: pointer;
+        font-size: 10px;
+        background-color: #ffffff;
+        border-bottom: 1px solid rgb(185, 185, 185);
     }
 }
+
+.arrow {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+// sort pop up============
+
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+/* The actual popup */
+
+.popuptext {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.popup .popuptext {
+    visibility: hidden;
+    width: 8em;
+    height: 6em;
+    background-color: #ffffff;
+    color: rgb(156, 156, 156);
+    border: 1px solid lightgray;
+    text-align: center;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    top: 38px;
+    left: 2.8em;
+    margin-left: -80px;
+}
+
+// Popup arrow:
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgb(182, 182, 182) transparent transparent transparent;
+}
+
+// Popup hide and show:
+.popup .show {
+    visibility: visible;
+    animation: fadeIn 0.2s;
+}
+
+// Popup animation:
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+// END sort pop up============
 
 ::placeholder {
     font-size: 16px;
@@ -76,13 +184,13 @@ input,
 }
 
 .containerCard {
-    border: 4px solid rgb(179, 179, 179);
+    border: 2px solid #b3b3b3;
 }
 
 .card {
     background-color: #242e31;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 0.2fr 0.2fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 0.2fr 0.2fr 0.2fr 3fr;
     gap: 10px;
     margin-bottom: 2px;
 
@@ -93,6 +201,10 @@ input,
         margin-right: auto;
         padding: 6%;
     }
+
+    .imgPic {
+        width: 10em;
+    }
 }
 
 .category,
@@ -100,7 +212,7 @@ input,
 .price {
     background-color: #ffffff;
     color: #050505;
-    border-radius: 4px;
+    border-radius: 2px;
     height: 20px;
     text-align: center;
     margin: 10px;
@@ -113,7 +225,7 @@ input,
     font-size: 18px;
     color: #ffffff;
     border: 1px solid #ffffff;
-    border-radius: 4px;
+    border-radius: 2px;
     text-align: center;
     margin: 10px;
     margin-top: 10px;
@@ -133,7 +245,7 @@ input,
 #textarea {
     width: 382px;
     resize: none;
-    border-radius: 6px;
+    border-radius: 2px;
     height: 80px;
     font-size: 18px;
 }
@@ -142,6 +254,7 @@ input,
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 1em;
 
 
     button {
@@ -170,43 +283,26 @@ input,
     input {
         color: #077207;
         font-size: 18px;
+        width: 6em;
     }
 
     #update {
-        font-size: 18px;
+        font-size: 1em;
         font-weight: bold;
+        width: 6em;
     }
 }
 
-.itemPic {
+.itemPicLine {
     display: flex;
+    width: 10%;
 }
 
 
-//  // STORE==========================
-
-//  .htmlStore {
-//      display: flex;
-//      flex-direction: column;
-//      justify-content: center;
-//      align-items: center;
-//      width: 200px;
-//      background-color: #1ed27e;
-
-//      img {
-//          width: 60%;
-//          object-fit: contain;
-//          margin-left: auto;
-//          margin-right: auto;
-//      }
-//  }
 
 //  // STORE========================== END YOSSI
 
 .header {
-    // display: grid;
-    // grid-template-columns: 1fr 2fr 2fr 1fr 1fr;
-    // z-index: 20;
     color: #fff;
     display: block;
     max-height: 120px;
@@ -214,11 +310,25 @@ input,
 
     &:hover {
         background-color: #000000;
+        transition: 0.4s;
     }
 
     img {
         width: 9.4%;
         height: 9.4%;
+    }
+
+    &__navBarTop {
+
+        button {
+            background-color: transparent;
+            border: none;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+        }
     }
 
     &__middle {
@@ -245,7 +355,6 @@ input,
                 bottom: 10px;
                 font-size: small;
             }
-
         }
 
         &__icons__left {
@@ -303,32 +412,40 @@ input,
 }
 
 .navBarSort {
-    position: relative;
-    margin-right: 0px;
-    left: -20px;
+    margin: 24px 0px;
 
     &__items {
-        display: flex;
-        justify-content: space-between;
-        gap: 10px;
-        list-style: none;
+        display: grid;
+        grid-template-columns: 0.2fr 10fr 1fr 0.8fr 0.5fr 0.8fr;
+        align-items: center;
 
+        .nav-item-left {
+            padding-left: 2em;
+            border-right: 1px solid lightgray;
+            padding-right: 10px;
+        }
+
+        .nav-item-right {
+            margin-left: 2em;
+            border-right: 1px solid gray;
+            cursor: pointer;
+        }
     }
 }
 
+.sortPopUp {
+    display: flex;
+    justify-content: end;
+    margin-right: 24px;
+}
 
 // end yael==============================
 
 
-// .video {
-//     width: 100%;
-// }
-
 .showcase {
-    // position: absolute;
     right: 0;
     width: 100%;
-    min-height: 65vh;
+    min-height: 62vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -374,10 +491,6 @@ body {
 
 }
 
-// .wrapper {
-//     display: grid;
-//     grid-template-rows: 1fr 1fr 1fr  ;
-// }
 
 .main {
     display: grid;
@@ -387,7 +500,6 @@ body {
     background-repeat: no-repeat;
     padding-left: 1%;
     padding-right: 1%;
-
     gap: 3px;
 
     &__item {
