--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/gucciNEWyossi/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/gucciNEWyossi/style.scss
@@ -739,3 +739,16 @@ body {
         border: none;
     }
 }
+#submit2 {
+    font-size: 20px;
+    color: black;
+    width: 40px;
+    padding: 1px;
+    background-color: white;
+    font-weight: 1000;
+    border-radius: 0%;
+    opacity: 0.8;
+    :hover{
+        opacity: 1;
+    }
+}
